[gd_scene load_steps=5 format=2]

[ext_resource path="res://Levels/MainMenu/Logo.png" type="Texture" id=1]
[ext_resource path="res://Styles/TitleFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Styles/myFont.tres" type="DynamicFont" id=3]
[ext_resource path="res://Levels/MainMenu/End Screen.gd" type="Script" id=4]

[node name="End Screen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
stretch_mode = 6

[node name="Label" type="Label" parent="."]
anchor_right = 1.0
margin_top = 120.0
margin_bottom = 347.0
custom_fonts/font = ExtResource( 2 )
text = "Thanks for playing!!!"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -81.5
margin_top = -53.0
margin_right = 81.5
margin_bottom = 53.0
custom_constants/separation = 9
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="VBoxContainer"]
margin_right = 163.0
margin_bottom = 51.0
custom_fonts/font = ExtResource( 3 )
text = "Main Menu"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button2" type="Button" parent="VBoxContainer"]
margin_top = 60.0
margin_right = 163.0
margin_bottom = 111.0
custom_fonts/font = ExtResource( 3 )
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label2" type="Label" parent="."]
anchor_right = 1.0
margin_top = 250.0
margin_bottom = 264.0
custom_fonts/font = ExtResource( 3 )
text = "Unfinished Levels Unlocked"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="VBoxContainer/Button2" to="." method="_on_Button2_pressed"]
